--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   },
-  "keywords": [],
+  "keywords": ["example",
+    "heroku"],
   "author": "Vishal",
   "license": "ISC",
   "dependencies": {
